--- a/backend/package.json
+++ b/backend/package.json
@@ -22,15 +22,16 @@
   "dependencies": {
     "express": "^5.1.0",
     "graphql": "^16.12.0",
-    "graphql-http": "^1.22.4"
+    "graphql-http": "^1.22.4",
+    "ruru": "^2.0.0-rc.3"
   },
   "devDependencies": {
     "@swc/core": "^1.15.2",
     "@types/express": "^5.0.5",
     "@types/node": "^22.19.1",
-    "typescript": "^5.9.3",
     "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   },
   "ts-node": {
     "esm": true,
