--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
   "scripts": {
     "test": "test",
     "start": "node dist/server.js",
-    "dev": "nodemon --exec node --loader ts-node/esm src/server.ts",
+    "dev": "tsx watch src/server.ts",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write .",
     "build": "tsc"
   },
   "dependencies": {
@@ -26,11 +28,10 @@
     "ruru": "^2.0.0-rc.3"
   },
   "devDependencies": {
-    "@swc/core": "^1.15.2",
     "@types/express": "^5.0.5",
     "@types/node": "^22.19.1",
-    "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2",
+    "prettier": "^3.8.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "ts-node": {
