--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,46 +1,29 @@
 {
-    "compilerOptions": {
-        "target": "ES2024",
-        "module": "esnext",
-        "moduleResolution": "bundler",
-        "lib": ["ES2024"],
-        "strict": true,
-        "noImplicitAny": false,
-        "noImplicitThis": false,
-        "noImplicitReturns": false,
-        "noImplicitOverride": false,
-        "noImplicitUseStrict": false,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "allowSyntheticDefaultImports": true,
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "outDir": "./dist",
-        "rootDir": "./src",
-        "sourceMap": true,
-        "declaration": true,
-        "declarationMap": true,
-        "emitDeclarationOnly": false,
-        "forceConsistentCasingInFileNames": true,
-        "paths": {
-            "@/*": [
-                "./src/*"
-            ],
-            "@modules/*": [
-                "./src/modules/*"
-            ]
-        }
-    },
-    "include": [
-        "src/**/*"
-    ],
-    "exclude": [
-        "node_modules",
-        "dist"
-    ],
-    "ts-node": {
-        "esm": true,
-        "experimentalSpecifierResolution": "node",
-        "swc": true
+  "compilerOptions": {
+    "target": "ES2024",
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "lib": ["ES2024"],
+    "strict": true,
+    "noImplicitAny": false,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "sourceMap": true,
+    "declaration": true,
+    "declarationMap": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"],
+      "@modules/*": ["./modules/*"],
+      "@products/*": ["./modules/products/*"]
     }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
