ci: added prisma ORM

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -21,7 +21,9 @@
     "paths": {
       "@/*": ["./*"],
       "@modules/*": ["./modules/*"],
-      "@products/*": ["./modules/products/*"]
+      "@products/*": ["./modules/products/*"],
+      "@infra/*": ["./infra/*"],
+      "@prisma-generated/*": ["./infra/prisma/generated/*"]
     }
   },
   "include": ["src/**/*"],
