--- a/backend/package.json
+++ b/backend/package.json
@@ -22,14 +22,16 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.2",
     "express": "^5.1.0",
     "graphql": "^16.12.0",
     "graphql-http": "^1.22.4",
+    "prisma": "^6.19.2",
     "ruru": "^2.0.0-rc.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
-    "@types/node": "^22.19.1",
+    "@types/node": "^22.19.11",
     "prettier": "^3.8.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
