--- a/backend/package.json
+++ b/backend/package.json
@@ -21,10 +21,23 @@
     "build": "tsc",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "db:up": "docker compose up -d",
+    "db:down": "docker compose down",
+    "db:reset": "docker compose down -v && docker compose up -d",
+    "db:logs": "docker compose logs -f postgres",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
+    "prisma:reset": "prisma migrate reset",
+    "prisma:seed": "prisma db seed",
+    "setup": "npm install && npm run db:up && npm run prisma:migrate",
+    "setup:fresh": "npm install && npm run db:reset && npm run prisma:migrate"
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "dotenv": "^17.3.1",
     "express": "^5.1.0",
     "graphql": "^16.12.0",
     "graphql-http": "^1.22.4",
